test/spec_vectors/align64/fail/module_79.wat
(module (memory i64 0) (func (drop (i64.load32_u align=8 (i64.const 0)))))